force-app/main/default/objects/Finance_Transaction__c/Finance_Transaction__c.object-meta.xml
<CustomObject>
    <label>Finance Transaction</label>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>Finance Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>